test/LitTests/SemanticAnalysis/LifetimeMethods/ThrowingSetInvalid.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

exception TestError();

class TestClass() {
	// CHECK: .loci:9:2: error: lifetime method '::TestClass::__setinvalid' isn't marked 'noexcept'
	// CHECK: .loci:9:2: error: function '::TestClass::__setinvalid' is declared as 'noexcept' but can throw
	void __setinvalid() {
		throw TestError();
	}
}

// CHECK: 2 errors generated.
